[gd_scene load_steps=12 format=2]

[ext_resource path="res://dev/scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/img/360_F_359557922_GPydLSSfjdlK4oEGn1ScOsMLFoEDecTl.jpg" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Vontjack.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/upheavtt.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 69
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.768627, 0.768627, 0.768627, 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.768627, 0.768627, 0.768627, 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.768627, 0.768627, 0.768627, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1370.0
margin_bottom = 739.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.0
margin_top = -137.5
margin_right = 296.0
margin_bottom = 66.5
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 518.0
margin_bottom = 204.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 518.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Mchezo Adventure"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 518.0
margin_bottom = 132.0
focus_neighbour_top = NodePath("../QuitButton")
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
text = "Start"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 518.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 6 )
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 518.0
margin_bottom = 204.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 7 )
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
